fixing fon overflow for different screen sizes

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -789,6 +789,7 @@ hr {
     justify-content: center;
     align-items: center;
     width: 100%;
+    /* border: 2px solid red; */
   }
 
   #left_side_small .link_btn_small {
@@ -832,14 +833,14 @@ hr {
 
   .main_bio {
     flex-direction: column;
-    min-height: 50vh;
-    max-height: 70vh;
+    min-height: 65vh;
+    max-height: 75vh;
     width: 90vw;
     margin: 5% 0% 5% 0%;
     padding: 0%;
     /* margin-bottom: 10%; */
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
     /* border: 2px solid red; */
   }
@@ -852,16 +853,24 @@ hr {
     /* display: flex; */
     margin: 0%;
     padding: 0% 5% 0% 5%;
-    font-size: 1.2em;
+    /* font-size: 1em; */
   }
 
   .rect {
     width: 100%;
     max-width: 100%;
-    height: 40%;
-    padding-bottom: 0%;
-    margin-bottom: 0%;
+    height: 50%;
+    padding: 0%;
+    margin: 0%;
+    margin-top: 1em;
     /* border: 2px solid black; */
+  }
+
+  .about_img {
+    margin: 0%;
+    padding: 0%;
+    min-height: 95%;
+    width: auto;
   }
 
   #hello {
@@ -874,26 +883,24 @@ hr {
     /* border: 2px solid red; */
   }
 
-  /* code for socials on about page*/
+  /*! code for socials on about page*/
 
   #mobile_socials {
-    color: white;
+    color: var(--main_color);
     display: flex;
     box-sizing: border-box;
-    width: 80%;
+    width: 70%;
     margin: 0%;
-    padding: 5%;
+    padding-bottom: 5%;
 
     font-size: 2em;
-
-    /* height: 10%; */
 
     justify-content: space-between;
     align-items: center;
     /* border: 2px solid red; */
   }
 
-  /* Resume page */
+  /*! Resume page */
 
   #resume_container {
     width: 90vw;
@@ -979,13 +986,30 @@ hr {
 
 /* This code is for small mobile screen */
 /* TODO - add more */
-@media screen and (max-width: 599px) {
+/* @media screen and (max-width: 399px) {
   .page_title {
     font-size: 2.5em;
   }
 
   .main_bio {
-    font-size: 0.7em;
-    /* border: solid red; */
+    font-size: 0.8em;
+    border: solid red;
+  }
+} */
+
+/* This code is for really small mobile screen (ex - galaxy fold) */
+/* TODO - add more */
+@media screen and (max-width: 380px) {
+  .page_title {
+    font-size: 2.5em;
+  }
+
+  .main_bio p {
+    font-size: 0.8em;
+    /* border: 2px solid red; */
+  }
+
+  .rect {
+    height: 45%;
   }
 }
